Fixed pagination error in home page. Handel popup , login button and design in signUp page. Add validation in confirmation phone page.  Edit design and web services of company info page. Add login web services. Add track order web services

--- a/src/app/pages/contactus/contactus.component.html
+++ b/src/app/pages/contactus/contactus.component.html
@@ -1,18 +1,19 @@
 <div class="container py-5">
     <div class="row mt-5">
-          <!-- Complaints and suggestions form -->
+        <!-- Complaints and suggestions form -->
         <div class="col-lg-7 col-md-8 mx-auto my-auto">
 
             <div class="contactUs">
-                <h2 class="text-center">Complaints and suggestions  
+                <h2 class="text-center">Complaints and suggestions
                 </h2>
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-          
+
             <form [formGroup]='cotactUsForm' class="">
 
+                <!--add  title -->
                 <div class="form-group my-4">
                     <label for="exampleInputEmail1"> <span class="text-danger">*</span> Title :</label>
 
@@ -26,6 +27,7 @@
                     </div>
                 </div>
 
+                  <!--add  details -->
                 <div class="form-group">
                     <label for="exampleInputEmail1"><span class="text-danger">*</span> Details :</label>
 
@@ -46,7 +48,7 @@
 
             </form>
         </div>
-        <!-- address section -->
+        <!-- address information section -->
         <div class="col-lg-5  my-auto pl-5">
             <div class="text-center">
                 <i class="fas fa-map-marker-alt text-mainColor fa-9x"></i>
@@ -54,7 +56,8 @@
             <div class="address my-5 text-black-50 text-center">
                 <h4 class="text-mainColor mb-3">Our Address
                 </h4>
-                <p>Sheikh Mohammed Bin Rashed Boulevard, Downtown Dubai, 31166 - Dubai, Next of the Armond building Road United Arab Emirates</p>
+                <p>Sheikh Mohammed Bin Rashed Boulevard, Downtown Dubai, 31166 - Dubai, Next of the Armond building Road
+                    United Arab Emirates</p>
             </div>
 
 
