--- a/src/app/pages/companyinfo/companyinfo.component.html
+++ b/src/app/pages/companyinfo/companyinfo.component.html
@@ -10,37 +10,24 @@
             <div class="  py-3">
                 <div class=" ">
 
-                    <div class="text-center login ">
-                        <h2 class=" text-white">company information</h2>
+                    <div class="text-center login mb-5 ">
+                        <h2 class=" text-white">Company Information</h2>
                     </div>
 
                     <div class="px-5 mt-4">
                         <form [formGroup]='companyInfotForm'>
 
-
-                            <!-- <div class="form-group">
-                                <div class="border-bottom  rounded px-4 py-2">
-
-
-                                    <select class="form-control border-0 bg-transparent">
-                                        <option>Select:</option>
-                                        <option>national</option>
-                                        <option>Iqama</option>
-                                        <option>GCC</option>
-                                    </select>
-                                </div>
-                            </div> -->
-
-
-                            
-                            <div class="form-group">
-                                <div class="border-bottom rounded mb-4" >
-                                  <div class="dropdown w-100">
-                                    <a  class="bg-transparent ml-5 text-white" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                     select id type : {{idTypeName}}
+                            <!-- select id Type  -->
+                            <div class="form-group ">
+                                <div class="border-bottom rounded px-4 py-2" >
+                                  <div class="dropdown">
+                                    <a  class="bg-transparent w-100  text-white" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                     <span class="">Select id type : {{idTypeName}}
+                                        <i class="fas fa-angle-down float-right"></i>
+                                     </span>
                                     </a>
-                                    <div class="dropdown-menu bg-mainColor" aria-labelledby="dropdownMenuButton">
-                                      <a class="dropdown-item text-white border-bottom" (click)="fillIdType(type)"  *ngFor="let type of idType">
+                                    <div class="dropdown-menu bg-mainColor w-100" aria-labelledby="dropdownMenuButton">
+                                      <a class="dropdown-item text-white border-bottom" (click)="fillIdType(type)" *ngFor="let type of types">
                                           <span>{{type}}</span>
                                       </a>
                                     </div>
@@ -50,14 +37,17 @@
                                   </div>
                               </div>
 
-
+                              <!-- select city  -->
                             <div class="form-group">
-                                <div class="border-bottom rounded mb-4" >
+                                <div class="border-bottom rounded  px-4 py-2" >
                                   <div class="dropdown w-100">
-                                    <a  class="bg-transparent ml-5 text-white" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                     select city : {{cityName}}
+                                    <a  class="bg-transparent w-100 text-white" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                     <span  class="">
+                                        Select City : {{cityName}}
+                                        <i class="fas fa-angle-down float-right"></i>
+                                     </span>
                                     </a>
-                                    <div class="dropdown-menu bg-mainColor" aria-labelledby="dropdownMenuButton">
+                                    <div class="dropdown-menu bg-mainColor w-100" aria-labelledby="dropdownMenuButton">
                                       <a class="dropdown-item text-white border-bottom" (click)="fillCity(city)"  *ngFor="let city of cityList">
                                           <span>{{city.en_city_name}}</span>
                                       </a>
@@ -68,12 +58,12 @@
                                   </div>
                               </div>
 
-
+                            <!-- national id -->
                             <div class="form-group">
-                                <!-- <label for="exampleInputEmail1">Email address</label> -->
+                            
                                 <div class="border-bottom  rounded px-4 py-2">
 
-                                    <input type="number" placeholder="national id" class="form-control border-0  bg-transparent" [class.is-valid]= "companyInfotForm.get('national_id').errors == null && companyInfotForm.get('national_id').touched "
+                                    <input type="number" placeholder="national id" class="form-control border-0 bg-transparent" [class.is-valid]= "companyInfotForm.get('national_id').errors == null && companyInfotForm.get('national_id').touched "
                                         formControlName='national_id' [(ngModel)]="informatioObj.id_number">
                                 </div>
                                 <div class="alert alert-danger" role="alert"
@@ -82,9 +72,8 @@
                             </div>
                             </div>
 
-
+                            <!-- Registration Number -->
                             <div class="form-group">
-                                <!-- <label for="exampleInputEmail1">Email address</label> -->
                                 <div class="border-bottom  rounded px-4 py-2">
 
                                     <input type="number" placeholder="Commercial Registration No"
@@ -96,7 +85,7 @@
                                 Enter Valid number data
                             </div>
                             </div>
-
+                            <!-- Address -->
                             <div class="form-group">
                                 <!-- <label for="exampleInputEmail1">Email address</label> -->
                                 <div class="border-bottom  rounded px-4 py-2">
@@ -110,18 +99,18 @@
                             </div>
                             </div>
 
+                            <!-- Attach image and file-->
                             <div class="form-group">
-                                <!-- <label for="exampleInputEmail1">Email address</label> -->
                                 <div class="px-4 py-2">
                                     <div class="row">
                                         <div class="col-md-6 mt-2">
-                                            <div class="py-5 border rounded bg-transparent text-center">
+                                            <div class="attachFile py-5 border rounded bg-transparent text-center">
                                                 <i class="fas fa-upload mx-2 mt-1"></i>
                                                 Attach file
                                             </div>
                                         </div>
                                         <div class="col-md-6 mt-2">
-                                            <div class="py-5 border rounded bg-transparent text-center"  (click)="uploadFile()">
+                                            <div class="attachFile py-5 border rounded bg-transparent text-center"  (click)="uploadFile()">
                                                 <i class="fas fa-upload mx-2 mt-1"></i>
                                                 Attach image
                                             </div>
