--- a/src/app/pages/confirmphone/confirmphone.component.html
+++ b/src/app/pages/confirmphone/confirmphone.component.html
@@ -12,9 +12,13 @@
                     <p>Enter Your Confirmation Number</p>
                      <p>Sent To : <span>+966505434048</span></p>
                 </div>
+                <!-- confirm phone number form -->
                 <form [formGroup]='confirmCodeForm'>
                     <input type="number" class="form-control"  [class.is-valid]="confirmCodeForm.get('code').errors == null && confirmCodeForm.get('code').touched " formControlName='code' [(ngModel)]="codeObj.code">
-                    <button class="submit" class="btn mt-3 btn-lg text-white bg-mainColor"  [disabled]='confirmCodeForm.invalid'  (click)="confirmCode();">Confirm</button>
+                    <div class="alert alert-danger" role="alert" *ngIf="confirmCodeForm.get('code').errors != null && confirmCodeForm.get('code').touched">
+                    Enter Valid code
+                    </div>
+                    <button class="submit" class="btn mt-3 btn-lg text-white bg-mainColor"  [disabled]='confirmCodeForm.invalid' (click)= "confirmCode();">Confirm</button>
                  </form>
             </div>
    
